correct idea's corrections in math.clamp